--- a/Challenge_1_1_Les_variables.ipynb
+++ b/Challenge_1_1_Les_variables.ipynb
@@ -342,25 +342,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "id": "9ZKeGRJWHfmZ"
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'meteo' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mmeteo\u001b[49m \n",
-      "\u001b[1;31mNameError\u001b[0m: name 'meteo' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "meteo "
+    "input(\"Est-ce qu'il fait beau aujourd'hui ? \")"
    ]
   },
   {
