--- a/Challenge_1_1_Les_variables.ipynb
+++ b/Challenge_1_1_Les_variables.ipynb
@@ -328,7 +328,7 @@
     }
    ],
    "source": [
-    "print(\"Hello world !\")"
+    "print(\"Hello world !\")\n"
    ]
   },
   {
@@ -342,13 +342,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "9ZKeGRJWHfmZ"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'oui'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "input(\"Est-ce qu'il fait beau aujourd'hui ? \")"
+    "input(\"Est-ce qu'il fait beau aujourd'hui ? \")\n",
+    "#input permet de demander à l'utilisateur de rentrer une valeur"
    ]
   },
   {
@@ -384,12 +396,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "id": "KnRegvf4HfmZ"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = input(\"Quelle est ton age ?\")\n",
+    "type(age)\n",
+    "#input renvoie vers un string\n",
+    "age_int = int(age)\n",
+    "type(age_int)\n",
+    "#conversion de str > int\n",
+    "print(age)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -411,8 +439,24 @@
    "metadata": {
     "id": "0ZG4el4bHfma"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = input(\"choisi un nombre: \")\n",
+    "y = input(\"choisi un autre nombre différent de x: \")\n",
+    "\n",
+    "# deux solution possible ici soit je met une virgule entre les 2 elements, soit j'attribue une troisieme variable a (x) par exemple.\n",
+    "x, y = y, x\n",
+    "\n",
+    "print(x, y)"
+   ]
   }
  ],
  "metadata": {
